gl51-master/src/test/deca/context/invalid/test_rule2_5.deca
//Description
//Champ de type non void

{
    void a;//error
    //PASSED
}